# JobScrapper

./: Dockerfile  export.py  exporter.py  indeed.py  main.py  pyproject.toml  remoteok.py  requirements.txt  scrapper.py  stackoverflow.py  weworkremotely.py
extractors/: indeed.py  wwr.py
scrapper/: alba.py  indeed.py  save.py  stackoverflow.py
templates/: home.html  index.html  report.html  search.html
