[tool.poetry]
name = "Job Scrapper"
version = "0.1.0"
description = ""
authors = ["rosenrose <crazytempler@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.28.1"
beautifulsoup4 = "^4.11.1"
selenium = "^4.4.3"
webdriver-manager = "^3.8.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
